<resources>
    <!-- Strings -->
    <string name="Do">Do</string>
    <string name="Listen">Listen</string>
    <string name="Read">Read</string>
    <string name="Watch">Watch</string>
    <string name="afternoon">Afternoon</string>
    <string name="amount">Amount</string>
    <string name="app_name">StudyBuddy</string>
    <string name="done">Done</string>
    <string name="evening">Evening</string>
    <string name="main_activity_title">Active Objectives</string>
    <string name="morning">Morning</string>
    <string name="new_objective">New objective</string>
    <string name="new_objective_activity_title">Create new objective</string>
    <string name="objective_counter">Objective Counter</string>
    <string name="objective_done_button">Objective Done</string>
    <string name="objective_title">Objective Title</string>
    <string name="objective_type">Objective type</string>
    <string name="reference_string">%1$s/day</string>
    <string name="settings">Settings</string>
    <string name="settings_activity_title">Settings</string>
    <string name="startEndDate">Start Date - End Date</string>
    <string name="notifications">Notifications</string>
    <string name="daily_reminder_time">Daily Reminder Time</string>
    <string name="daily_reminder_message">Don\'t forget to complete your daily objectives!</string>
    <string name="daily_reminder_description">You have %1$d objectives left for today</string>
    <string name="daily_reminder_description_alt">You may have some objectives left!</string>

    <!-- Plurals -->
    <plurals name="hours">
        <item quantity="one">hour</item>
        <item quantity="other">hours</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>

    <plurals name="times">
        <item quantity="one">time</item>
        <item quantity="other">times</item>
    </plurals>

    <plurals name="pages">
        <item quantity="one">page</item>
        <item quantity="other">pages</item>
    </plurals>
</resources>