<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ObjectiveCreationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarNewObjective"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/new_objective_activity_title" />

    <EditText
        android:id="@+id/editTextObjectiveTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/objective_title"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarNewObjective" />

    <Spinner
        android:id="@+id/spinnerObjectiveType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/objective_type"
        android:dropDownWidth="match_parent"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@+id/editTextObjectiveAmount"
        app:layout_constraintStart_toStartOf="@+id/editTextObjectiveTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewObjectiveType"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textViewObjectiveType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/objective_type"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewObjectiveAmount"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/editTextObjectiveTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTextObjectiveTitle" />

    <TextView
        android:id="@+id/textViewObjectiveAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/amount"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextObjectiveTitle"
        app:layout_constraintStart_toEndOf="@+id/textViewObjectiveType"
        app:layout_constraintTop_toBottomOf="@+id/editTextObjectiveTitle" />

    <EditText
        android:id="@+id/editTextObjectiveAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/editTextObjectiveTitle"
        app:layout_constraintTop_toTopOf="@+id/spinnerObjectiveType"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextStartEndDates"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/startEndDate"
        android:importantForAutofill="no"
        android:inputType="date"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerObjectiveType" />

    <Button
        android:id="@+id/buttonCreateObjective"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextStartEndDates" />

</androidx.constraintlayout.widget.ConstraintLayout>