<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/counterTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/objective_counter"
        android:gravity="center"
        android:text="100"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/objective_title"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/counterTextView"
        app:layout_constraintTop_toTopOf="@+id/counterTextView" />

    <ImageButton
        android:id="@+id/objectiveDoneButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/objective_done_button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/titleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/titleTextView"
        app:layout_constraintTop_toTopOf="@+id/titleTextView"
        app:srcCompat="@drawable/done_icon" />

    <ProgressBar
        android:id="@+id/objectiveProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:indeterminate="false"
        android:progress="50"
        android:progressDrawable="@android:drawable/progress_horizontal"
        android:progressTint="@color/light_green"
        app:layout_constraintBottom_toBottomOf="@+id/startDateTextView"
        app:layout_constraintEnd_toStartOf="@+id/endDateTextView"
        app:layout_constraintStart_toEndOf="@+id/startDateTextView"
        app:layout_constraintTop_toTopOf="@+id/startDateTextView" />

    <TextView
        android:id="@+id/startDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="17/12/2003"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/counterTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <TextView
        android:id="@+id/endDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="28/12/2003"
        app:layout_constraintBottom_toBottomOf="@+id/startDateTextView"
        app:layout_constraintEnd_toEndOf="@+id/objectiveDoneButton"
        app:layout_constraintTop_toTopOf="@+id/startDateTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>